fix(styles): proper handling of the boxes when sidebars are visible

--- a/src/components/sti-arrow/sti-arrow.pcss
+++ b/src/components/sti-arrow/sti-arrow.pcss
@@ -4,4 +4,5 @@
   color: rgb(105, 105, 105);
   cursor: default;
   margin-right: 2px;
+  box-sizing: border-box;
 }
