--- a/src/components/sti-group/sti-group.pcss
+++ b/src/components/sti-group/sti-group.pcss
@@ -1,24 +1,30 @@
 :host {
   display: flex;
-  flex-basis: 100%;
-  flex-wrap: wrap;
+  flex: 1;
+  flex-flow: column;
+  box-sizing: border-box;
+  min-width: 100%;
 
   & .header {
     display: flex;
-    flex-basis: 100%;
+    flex: 1;
     font-weight: 400;
     font-size: 12px;
     margin: 0;
     padding: 4px;
+    box-sizing: border-box;
     background: rgb(244, 244, 244);
     border-bottom: 1px solid rgba(0, 0, 0, 0.25);
     border-top: 1px solid rgba(0, 0, 0, 0.25);
   }
 
   & .content {
+    flex: 1;
+    box-sizing: border-box;
     margin: 4px;
     display: none;
-    flex-wrap: wrap;
+    flex-flow: column;
+    width: fit-content;
   }
 }
 
@@ -40,5 +46,9 @@
     background: rgb(36, 36, 36);
     border-bottom-color: rgb(61, 61, 61);
     border-top-color: rgb(61, 61, 61);
+  }
+
+  & .content {
+    background-color: rgb(27, 27, 27);
   }
 }
