--- a/src/components/sti-item/sti-item.pcss
+++ b/src/components/sti-item/sti-item.pcss
@@ -1,13 +1,15 @@
 :host {
   display: flex;
-  flex-basis: 100%;
+  flex: 1;
   overflow: hidden;
-  flex-wrap: wrap;
+  box-sizing: border-box;
+  flex-flow: column;
 
   & .item {
     display: flex;
-    flex-basis: 100%;
+    flex: 1;
     padding: 3px 0;
+    box-sizing: border-box;
     white-space: nowrap;
 
     & .name {
@@ -15,6 +17,7 @@
       color: rgb(128, 0, 128);
       font-family: monospace;
       margin: 0 4px 0 1px;
+      box-sizing: border-box;
 
       &:after {
         content: ':';
@@ -52,7 +55,7 @@
         white-space: nowrap;
 
         &.print {
-          white-space: pre-wrap;
+          white-space: pre;
         }
 
         &:not(.print) {
@@ -83,6 +86,10 @@
   }
 
   & .children {
+    flex: 1;
+    display: flex;
+    box-sizing: border-box;
+    flex-direction: column;
     padding-left: 16px;
   }
 }
