--- a/src/components/sti-logo/sti-logo.pcss
+++ b/src/components/sti-logo/sti-logo.pcss
@@ -1,10 +1,11 @@
 :host {
   display: flex;
-  flex-basis: 100%;
+  flex: 1;
   background: rgb(244, 244, 244);
   padding: 5px 0;
+  box-sizing: border-box;
   color: rgb(22, 22, 29);
-  min-width: 100vw;
+  min-width: 100%;
   justify-content: center;
 
   & .logo {
