--- a/src/components/sti-main/sti-main.pcss
+++ b/src/components/sti-main/sti-main.pcss
@@ -1,6 +1,8 @@
 :host {
   display: flex;
-  flex-wrap: wrap;
+  box-sizing: border-box;
+  flex-flow: column;
+  min-width: 100%;
   width: fit-content;
 
   & .message {
