--- a/src/components/sti-message/sti-message.pcss
+++ b/src/components/sti-message/sti-message.pcss
@@ -1,7 +1,9 @@
 :host {
   display: flex;
   padding: 4px 2px;
+  flex: 1;
   font-size: 10px;
+  box-sizing: border-box;
 }
 
 :host(.dark) {
