--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,11 +1,11 @@
+html {
+  overflow-y: scroll;
+}
+
 html,
 body {
   margin: 0;
   padding: 0;
-  height: 100%;
-}
-
-/* stylelint-disable selector-max-universal */
-* {
   box-sizing: border-box;
+  height: 100%;
 }
